--- a/scss/base/_vars.scss
+++ b/scss/base/_vars.scss
@@ -13,8 +13,19 @@ $font-boton:Helvetica;
 $font-texto:'Roboto','Quicksand',sans-serif;
 $font-H:'Roboto Flex', sans-serif;
 
+
+
+
 $f-tiny:1rem;
 $f-small:1.6rem;
 $f-regular:2rem;
 $f-big:2.5rem;
-$f-bold:3rem
+$f-bold:3rem;
+
+@media only screen and (max-width:600px){
+    $f-tiny:1rem - .4;
+    $f-small:1.6rem - .4;
+    $f-regular:2rem - .4;
+    $f-big:2.5rem - .6;
+    $f-bold:3rem - .6;
+}
