--- a/scss/main/_header.scss
+++ b/scss/main/_header.scss
@@ -45,6 +45,7 @@ header{
             justify-content: space-evenly; 
             align-items: center;
             @media only screen and (max-width:600px){
+                margin: 0;
                 flex-direction: column;
                 justify-content: start;
                 overflow-x: hidden;
@@ -54,10 +55,11 @@ header{
                 position: fixed;
                 top: 0;
                 left: 0;
-                height: 100vh;
+                height: 100%;
                 transition: .6s;
+                background-color: $fondo-offcanvas;
                 &.active-canvas{
-                    background-color: $fondo-offcanvas
+                    box-shadow: 200px 0px 0px #0d042b87;
                 }   
             }
             li{
