--- a/scss/main/_projects.scss
+++ b/scss/main/_projects.scss
@@ -3,6 +3,13 @@
     overflow: hidden;
     height: 100vh;
     padding: 80px 70px;
+    @media only screen and (max-width:415px){
+      overflow-x: scroll;
+      padding: 60px 12px;
+      &.caixa-conteudo-ativo{
+        overflow-x: hidden;
+      }
+    }
   }
   .componente-interno-geral {
     position: relative;
@@ -22,6 +29,11 @@
     transition: transform 0.6s 0.7s, width 0.7s, opacity 0.6s 0.7s,
     z-index 0s 1.3s;
     will-change: transform, width, opacity;
+    @media only screen and (max-width:415px){
+      width: 80%;
+      scroll-snap-type: proximity;
+      scroll-snap-align: center;
+    }
   }
   .componente:not(.caixa-conteudo-ativo) {
     cursor: pointer;
@@ -30,12 +42,22 @@
     overflow: hidden;
     position: relative;
     height: 100%;
+    @media only screen and (max-width:415px){
+      width: 100%;
+    }
   }
   .componente-interno {
     overflow: hidden;
     position: relative;
     height: 100%;
     transition: transform 1s;
+  }
+  .conteudo-geral.componente.caixa-conteudo-ativo{
+    @media only screen and (max-width:415px){
+      .componente-interno{
+        width: 0;
+      }
+    }
   }
   .conteudo-geral.js-conteudo-geral .componente-interno {
     transform: translate3d(0, 100%, 0);
@@ -48,10 +70,12 @@
     will-change: transform;
   }
   
-  /*-------hasta aca hecho----------*/
   
   .conteudo-geral.caixa--componente-ativo .componente-fundo-imagem {
     width: calc(100vw - 140px);
+    @media only screen and (maw-width:415px){
+      width: 100vw
+    }
   }
   
   .componente-fundo-imagem:before {
@@ -65,6 +89,9 @@
     background-position: center center;
     transition: transform 1s;
     transform: translate3d(0, 0, 0) scale(1);
+    @media only screen and (max-width:415px){
+      width: 130%;
+    }
   }
   
   .conteudo-geral.js-conteudo-geral .componente-fundo-imagem:before {
@@ -84,6 +111,10 @@
     background: rgba(28, 1, 51, 0.7);
     opacity: 0;
     transition: opacity 0.5s;
+    @media only screen and (max-width:415px){
+      width: 131%;
+      height: 110%;
+    }
   }
   .conteudo-geral.caixa--componente-ativo .componente-fundo-imagem:after {
     transition: opacity 0.5s 1.4s;
@@ -110,6 +141,9 @@
     opacity: 0;
     transform: translateY(30px);
     transition: all 0.5s;
+    @media only screen and (max-width:415px){
+      width: 0;
+    }
   }
   .componente-titulo {
     color: #fff;
@@ -207,6 +241,9 @@
   .conteudo-geral.caixa--componente-ativo .componente-index {
     transition: transform 0.5s, opacity 0.3s;
     opacity: 0;
+    @media only screen and (max-width:415px) {
+        width: 0;
+    }
   }
   .componente-index-back,
   .componente-index-front {
