--- a/scss/main/_projects.scss
+++ b/scss/main/_projects.scss
@@ -23,7 +23,7 @@
     position: absolute;
     left: 0;
     top: 0;
-    width: 30.2%;
+    width: 44.2%;
     height: 100%;
     background: $fondo;
     transition: transform 0.6s 0.7s, width 0.7s, opacity 0.6s 0.7s,
@@ -229,11 +229,14 @@
     height: 100%;
     min-height: 250px;
     text-align: center;
-    font-size: 20vw;
+    font-size: 6vw;
     line-height: 0.85;
     font-weight: bold;
     transition: transform 0.5s, opacity 0.3s 1.4s;
     transform: translate3d(0, 1vw, 0);
+    @media only screen and (max-width:600px) {
+      font-size: 18vW;
+    }
   }
   .componente:hover .componente-index {
     transform: translate3d(0, 0, 0);
