--- a/scss/main/_sortCards.scss
+++ b/scss/main/_sortCards.scss
@@ -20,10 +20,12 @@ $base-delay:0s;
         .componente-fundo-imagem{
             &::before{
                 transition-delay: $base-delay;
-                background: no-repeat center/400% url(nth($images,$i));
+                background: no-repeat center/200% url(nth($images,$i));
             }
         }
-
+        &.caixa-conteudo-ativo .componente-fundo-imagem:before{
+          background: no-repeat center/100% url(nth($images,$i));
+        }
     }
     $base-delay:$base-delay + 0.1s;
 }
@@ -40,5 +42,4 @@ $base-delay:0s;
   .componente.caixa-conteudo-ativo .componente-fundo-imagem:before {
     transition-delay: 0.6s;
     transform: scale(1.1);
-    background: transparent;
   }
