--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -80,15 +80,16 @@ header nav .nav-button span {
   border-radius: 8px;
 }
 header nav img {
-  height: 250%;
+  height: 350%;
+  margin: 98px 32px 0px auto;
   margin-left: 64px;
   margin-right: auto;
   z-index: 1;
 }
 @media only screen and (max-width: 415px) {
   header nav img {
-    margin-left: 32px;
-    margin-top: 64px;
+    height: 250%;
+    margin: 64px auto 0px 32px;
   }
 }
 header nav ul {
@@ -123,8 +124,14 @@ header nav ul li {
   margin: 24px 24px 0px;
   font-size: 1rem;
 }
+header nav ul li.closebtn {
+  position: absolute;
+  top: 12px;
+  right: 12px;
+}
 header nav ul li.closebtn a {
   text-decoration: none;
+  font-size: 32px;
 }
 @media only screen and (min-width: 600px) {
   header nav ul li {
@@ -154,7 +161,6 @@ header nav ul li a button {
 }
 
 #main {
-  transition: margin-left 0.5s;
   padding: 16px;
 }
 
@@ -349,6 +355,12 @@ main section:nth-child(3) .card > p {
   margin-right: 128px;
   margin-left: 32px;
 }
+@media only screen and (max-width: 600px) {
+  main section:nth-child(3) .card > p {
+    font-size: 1.2rem;
+    margin: 12px 0;
+  }
+}
 main section:nth-child(3) .card div, main section:nth-child(3) .card .card-footer {
   display: flex;
   flex-direction: row;
@@ -356,6 +368,12 @@ main section:nth-child(3) .card div, main section:nth-child(3) .card .card-foote
 }
 main section:nth-child(3) .card div > ul, main section:nth-child(3) .card .card-footer > ul {
   margin: 24px 64px;
+}
+@media only screen and (max-width: 600px) {
+  main section:nth-child(3) .card div, main section:nth-child(3) .card .card-footer {
+    justify-content: flex-start;
+    margin: 0;
+  }
 }
 main section:nth-child(3) .card > .list-lenguajes {
   margin-right: 32px;
@@ -934,43 +952,97 @@ footer h2 {
 }
 footer form {
   margin: 64px auto;
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
+  display: grid;
+  grid-template-columns: 1fr 1.5fr;
+  grid-template-rows: 2fr 1fr;
+  grid-template-areas: "contacto consulta" "boton boton";
+  align-items: flex-start;
+  justify-items: center;
+  width: 80%;
 }
 @media only screen and (max-width: 415px) {
   footer form {
+    display: flex;
     margin-bottom: 0;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    width: 100%;
+  }
+}
+footer form button {
+  grid-area: boton;
+  font-size: 1rem;
+  background-color: #3A2C5E;
+  border: 1px solid #F1E7FF;
+  border-radius: 6px;
+  width: 256px;
+  height: 42px;
+  padding: 0;
+  font-family: "Roboto Flex", sans-serif;
+  text-align: center;
+  font-weight: 400;
+  color: #F1E7FF;
+  cursor: pointer;
+  margin-top: 96px;
+  transition: all 0.3s;
+}
+footer form button:hover {
+  background-color: #4f3c81;
+}
+footer form button:active {
+  background-color: #806ab9;
+}
+@media only screen and (max-width: 600px) {
+  footer form button {
+    margin-bottom: 0;
+    font-size: 1rem;
+    width: 90%;
   }
 }
 footer form label {
   color: #F1E7FF;
   display: inline-block;
-  margin-top: 32px;
-  margin-bottom: 8px;
 }
 footer form div {
   display: flex;
   flex-direction: column;
 }
 footer form div:nth-child(1) {
-  margin-left: 15%;
+  grid-area: contacto;
+  width: 100%;
 }
-@media only screen and (max-width: 415px) {
+footer form div:nth-child(1) label {
+  margin: 32px auto 8px 20%;
+}
+footer form div:nth-child(1) label:first-child {
+  margin-top: 0px;
+}
+footer form div:nth-child(1) input {
+  margin: 4px auto 8px 20%;
+  width: 70%;
+}
+@media only screen and (max-width: 600px) {
+  footer form div:nth-child(1) input {
+    width: 316px;
+  }
+}
+@media only screen and (max-width: 600px) {
   footer form div:nth-child(1) {
     margin-left: 12px;
     margin-right: 12px;
   }
+  footer form div:nth-child(1) label, footer form div:nth-child(1) input {
+    margin: 4px auto 8px 48px;
+  }
 }
 footer form div:nth-child(2) {
+  grid-area: consulta;
   margin-left: 5%;
 }
-@media only screen and (max-width: 415px) {
+@media only screen and (max-width: 600px) {
   footer form div:nth-child(2) {
-    margin-left: 12px;
+    margin-left: 0;
   }
 }
 footer form div input, footer form div textarea {
@@ -991,12 +1063,13 @@ footer form div input {
 }
 footer form div textarea {
   width: 600px;
-  height: 300px;
+  height: 256px;
   resize: none;
+  margin-top: 12px;
 }
 @media only screen and (max-width: 415px) {
   footer form div textarea {
-    width: 300px;
+    width: 316px;
   }
 }
 
