--- a/src/public/scss/main/_footer.scss
+++ b/src/public/scss/main/_footer.scss
@@ -27,37 +27,89 @@ footer{
     }
     form{
         margin: 64px auto;
-        display: flex;
-        flex-direction: row;
-        // justify-content: space-evenly;
-        flex-wrap: wrap;
+        display: grid;
+        grid-template-columns: 1fr 1.5fr;
+        grid-template-rows: 2fr 1fr;
+        grid-template-areas: 
+        "contacto consulta"
+        "boton boton";
+        align-items: flex-start;
+        justify-items: center;
+        width: 80%;
         @media only screen and (max-width:415px){
+            display: flex;
             margin-bottom: 0;
             flex-direction: column;
             justify-content: center;
             align-items: center;
+            width: 100%;
+        }
+        button{
+            grid-area: boton;
+            font-size: $f-tiny;
+            background-color: $fondo-botones;
+            border: 1px solid $borde-botones;
+            border-radius: 6px;
+            width: 256px;
+            height: 42px;
+            padding: 0;
+            font-family: $font-H;
+            text-align: center;
+            font-weight: 400;
+            color: $borde-botones;
+            cursor: pointer;
+            margin-top: 96px;
+            transition: all .3s;
+            &:hover{
+                background-color: lighten($fondo-botones, 10%);
+            }
+            &:active{
+                background-color: lighten($fondo-botones, 30%);
+            }
+            @media only screen and (max-width: 600px){
+                margin-bottom: 0;
+                font-size: $f-tiny;
+                width: 90%;
+            }
         }
         label{
             color: $parrafos;
             display: inline-block;
-            margin-top: 32px;
-            margin-bottom: 8px;
+            // margin: 32px 300px 8px auto;
         }
         div{
             display: flex;
             flex-direction: column;
             &:nth-child(1){
-                margin-left: 15%;
-                @media only screen and (max-width:415px){
+                grid-area: contacto;
+                width: 100%;
+                label{
+                    margin: 32px auto 8px 20%;
+                    &:first-child{
+                        margin-top: 0px;
+                    }
+                }
+                input{
+                    margin: 4px auto 8px 20%;
+                    width:70%;
+                    @media only screen and (max-width:600px){
+                        width: 316px;
+                    }
+                }
+                @media only screen and (max-width:600px){
                     margin-left: 12px;
                     margin-right: 12px;
+                    label,input{
+                        margin: 4px auto 8px 48px;
+                    }
                 }
                 
             }
             &:nth-child(2){
+                grid-area: consulta;
                 margin-left: 5%;
-                @media only screen and (max-width:415px){
-                    margin-left: 12px;
+                @media only screen and (max-width:600px){
+                    margin-left: 0;
                 }
             }
             input,textarea{
@@ -72,14 +124,16 @@ footer{
                 height: 28px;
                 @media only screen and (max-width:415px){
                     height: 30px;
+                    // width: 316px;
                 }
             }
             textarea{
                 width: 600px;
-                height: 300px;
+                height: 256px;
                 resize: none;
+                margin-top: 12px;
                 @media only screen and (max-width:415px){
-                    width: 300px;
+                    width: 316px;
                 }
             }
         }
