--- a/src/public/scss/main/_header.scss
+++ b/src/public/scss/main/_header.scss
@@ -29,13 +29,14 @@ header{
         }
     
         img{
-            height: 250%;
+            height: 350%;
+            margin: 98px 32px 0px auto;
             margin-left: 64px;
             margin-right: auto;
             z-index: 1;
             @media only screen and (max-width:415px){
-                margin-left:32px ;
-                margin-top: 64px;
+                height: 250%;
+                margin: 64px auto 0px 32px;
             }
         }
         ul{
@@ -67,8 +68,12 @@ header{
                 margin: 24px 24px 0px;
                 font-size: $f-tiny;
                 &.closebtn{
+                    position: absolute;
+                    top: 12px;
+                    right: 12px;
                     a{
                         text-decoration: none;
+                        font-size: 32px;
                     }
                 }
                 @media only screen and (min-width:600px){
@@ -102,6 +107,5 @@ header{
     }
 }
 #main{
-    transition: margin-left .5s;
-    padding: 16px;
+     padding: 16px;
 }
