--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -158,6 +158,13 @@ header nav ul li a button {
   font-family: "Roboto Flex", sans-serif;
   font-weight: 400;
   color: #F1E7FF;
+  transition: all 0.3s;
+}
+header nav ul li a button:hover {
+  background-color: #4f3c81;
+}
+header nav ul li a button:active {
+  background-color: #654da3;
 }
 
 #main {
@@ -305,6 +312,11 @@ main section:nth-child(3) .card > button:first-child {
   display: inline-block;
   width: fit-content;
 }
+@media only screen and (max-width: 600px) {
+  main section:nth-child(3) .card > button:first-child {
+    margin: 42px auto 0 12px;
+  }
+}
 main section:nth-child(3) .card > button:first-child span {
   display: inline-block;
   padding: 6px;
@@ -345,8 +357,20 @@ main section:nth-child(3) .card strong, main section:nth-child(3) .card h3 {
   font-size: 2rem;
   font-family: "Roboto Flex", sans-serif;
 }
+@media only screen and (max-width: 600px) {
+  main section:nth-child(3) .card strong, main section:nth-child(3) .card h3 {
+    font-size: 1.6rem;
+    margin-top: 42px;
+  }
+}
 main section:nth-child(3) .card h3 {
   margin-left: 32px;
+}
+@media only screen and (max-width: 600px) {
+  main section:nth-child(3) .card h3 {
+    text-align: center;
+    margin-left: 0;
+  }
 }
 main section:nth-child(3) .card > p {
   font-size: 1.4rem;
@@ -358,34 +382,34 @@ main section:nth-child(3) .card > p {
 @media only screen and (max-width: 600px) {
   main section:nth-child(3) .card > p {
     font-size: 1.2rem;
-    margin: 12px 0;
+    margin: 42px 0;
   }
 }
-main section:nth-child(3) .card div, main section:nth-child(3) .card .card-footer {
+main section:nth-child(3) .card .card-footer {
   display: flex;
   flex-direction: row;
   align-items: flex-start;
-}
-main section:nth-child(3) .card div > ul, main section:nth-child(3) .card .card-footer > ul {
-  margin: 24px 64px;
+  justify-content: space-evenly;
+  margin-left: 32px;
+  margin-top: 32px;
 }
 @media only screen and (max-width: 600px) {
-  main section:nth-child(3) .card div, main section:nth-child(3) .card .card-footer {
-    justify-content: flex-start;
-    margin: 0;
+  main section:nth-child(3) .card .card-footer {
+    justify-content: space-evenly;
+    align-items: center;
+    width: 100%;
+    margin: 24px 0;
   }
-}
-main section:nth-child(3) .card > .list-lenguajes {
-  margin-right: 32px;
-}
-main section:nth-child(3) .card > .list-lenguajes ul li {
-  margin-top: 8px;
-  font-size: 1.2rem;
 }
 main section:nth-child(3) .card .card-footer li {
   width: 42px;
   height: 42px;
   margin: auto 8px;
+}
+@media only screen and (max-widht: 600px) {
+  main section:nth-child(3) .card .card-footer li {
+    margin: auto;
+  }
 }
 main section:nth-child(3) .card .card-footer li a {
   font-size: 28px;
@@ -413,6 +437,44 @@ main section:nth-child(3) .card .card-footer li a .bi-laptop:hover {
 main section:nth-child(3) .card .card-footer li a .bi-diagram-3:hover {
   color: rgb(119, 67, 67);
   border-color: rgb(119, 67, 67);
+}
+main section:nth-child(3) .card > .list-lenguajes {
+  margin-left: 32px;
+  display: flex;
+  flex-direction: row;
+  justify-content: start;
+  align-items: flex-start;
+}
+@media only screen and (max-width: 600px) {
+  main section:nth-child(3) .card > .list-lenguajes {
+    margin-left: 0;
+    justify-content: space-around;
+  }
+}
+main section:nth-child(3) .card > .list-lenguajes ul:first-child {
+  margin-left: 12px;
+}
+@media only screen and (max-width: 600px) {
+  main section:nth-child(3) .card > .list-lenguajes ul:first-child {
+    margin-left: 0;
+  }
+}
+main section:nth-child(3) .card > .list-lenguajes ul:nth-child(2) {
+  margin-left: 128px;
+}
+@media only screen and (max-width: 600px) {
+  main section:nth-child(3) .card > .list-lenguajes ul:nth-child(2) {
+    margin-left: 0;
+  }
+}
+main section:nth-child(3) .card > .list-lenguajes ul li {
+  margin-top: 8px;
+  font-size: 1.2rem;
+}
+@media only screen and (max-width: 600px) {
+  main section:nth-child(3) .card > .list-lenguajes ul li {
+    font-size: 1rem;
+  }
 }
 
 .conteudo-geral {
@@ -769,6 +831,11 @@ main section:nth-child(3) .card .card-footer li a .bi-diagram-3:hover {
 .componente:nth-child(1).caixa-conteudo-ativo .componente-fundo-imagem:before {
   background: no-repeat center/100% url("../multimedia/fotos/ProyectoFreaks3D.png");
 }
+@media only screen and (max-width: 600px) {
+  .componente:nth-child(1).caixa-conteudo-ativo .componente-fundo-imagem:before {
+    background: no-repeat center/200% url("../multimedia/fotos/ProyectoFreaks3D.png");
+  }
+}
 
 .conteudo-geral.caixa--componente-ativo .componente:nth-child(2):not(.caixa-conteudo-ativo) {
   transform: scale(0.5) translate3d(105.2083333333%, 0, 0);
@@ -789,6 +856,11 @@ main section:nth-child(3) .card .card-footer li a .bi-diagram-3:hover {
 .componente:nth-child(2).caixa-conteudo-ativo .componente-fundo-imagem:before {
   background: no-repeat center/100% url("../multimedia/fotos/ProyectoQuality.png");
 }
+@media only screen and (max-width: 600px) {
+  .componente:nth-child(2).caixa-conteudo-ativo .componente-fundo-imagem:before {
+    background: no-repeat center/200% url("../multimedia/fotos/ProyectoQuality.png");
+  }
+}
 
 .conteudo-geral.caixa--componente-ativo .componente:nth-child(3):not(.caixa-conteudo-ativo) {
   transform: scale(0.5) translate3d(210.4166666667%, 0, 0);
@@ -808,6 +880,11 @@ main section:nth-child(3) .card .card-footer li a .bi-diagram-3:hover {
 }
 .componente:nth-child(3).caixa-conteudo-ativo .componente-fundo-imagem:before {
   background: no-repeat center/100% url("../multimedia/LandingQualityDestkopx.png");
+}
+@media only screen and (max-width: 600px) {
+  .componente:nth-child(3).caixa-conteudo-ativo .componente-fundo-imagem:before {
+    background: no-repeat center/200% url("../multimedia/LandingQualityDestkopx.png");
+  }
 }
 
 .componente.caixa-conteudo-ativo {
