--- a/css/style.css
+++ b/css/style.css
@@ -389,7 +389,7 @@ main section:nth-child(3) .card .card-footer {
   display: flex;
   flex-direction: row;
   align-items: flex-start;
-  justify-content: space-evenly;
+  justify-content: flex-start;
   margin-left: 32px;
   margin-top: 32px;
 }
@@ -1027,127 +1027,54 @@ footer .nombreSeccion hr {
 footer h2 {
   margin-bottom: 12px;
 }
-footer form {
-  margin: 64px auto;
-  display: grid;
-  grid-template-columns: 1fr 1.5fr;
-  grid-template-rows: 2fr 1fr;
-  grid-template-areas: "contacto consulta" "boton boton";
-  align-items: flex-start;
-  justify-items: center;
-  width: 80%;
+footer nav {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 32px;
 }
-@media only screen and (max-width: 415px) {
-  footer form {
-    display: flex;
-    margin-bottom: 0;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
+@media only screen and (max-width: 600px) {
+  footer nav {
+    margin-bottom: 24px;
   }
 }
-footer form button {
-  grid-area: boton;
+footer nav button {
+  margin: 24px auto;
   font-size: 1rem;
-  background-color: #3A2C5E;
   border: 1px solid #F1E7FF;
   border-radius: 6px;
-  width: 256px;
-  height: 42px;
+  width: 300px;
+  height: fit-content;
   padding: 0;
   font-family: "Roboto Flex", sans-serif;
   text-align: center;
   font-weight: 400;
   color: #F1E7FF;
-  cursor: pointer;
-  margin-top: 96px;
-  transition: all 0.3s;
-}
-footer form button:hover {
-  background-color: #4f3c81;
-}
-footer form button:active {
-  background-color: #806ab9;
-}
-@media only screen and (max-width: 600px) {
-  footer form button {
-    margin-bottom: 0;
-    font-size: 1rem;
-    width: 90%;
-  }
-}
-footer form label {
-  color: #F1E7FF;
-  display: inline-block;
-}
-footer form div {
+  transition: all 0.5s;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
 }
-footer form div:nth-child(1) {
-  grid-area: contacto;
-  width: 100%;
+footer nav button:first-child {
+  background-color: #21bd5c;
 }
-footer form div:nth-child(1) label {
-  margin: 32px auto 8px 20%;
+footer nav button:first-child:hover {
+  background-color: #4be083;
 }
-footer form div:nth-child(1) label:first-child {
-  margin-top: 0px;
+footer nav button:last-child {
+  background-color: #B53328;
 }
-footer form div:nth-child(1) input {
-  margin: 4px auto 8px 20%;
-  width: 70%;
+footer nav button:last-child:hover {
+  background-color: #d4483c;
 }
-@media only screen and (max-width: 600px) {
-  footer form div:nth-child(1) input {
-    width: 316px;
-  }
+footer nav button img {
+  height: 64px;
 }
-@media only screen and (max-width: 600px) {
-  footer form div:nth-child(1) {
-    margin-left: 12px;
-    margin-right: 12px;
-  }
-  footer form div:nth-child(1) label, footer form div:nth-child(1) input {
-    margin: 4px auto 8px 48px;
-  }
-}
-footer form div:nth-child(2) {
-  grid-area: consulta;
-  margin-left: 5%;
-}
-@media only screen and (max-width: 600px) {
-  footer form div:nth-child(2) {
-    margin-left: 0;
-  }
-}
-footer form div input, footer form div textarea {
-  border-radius: 8px;
-  background-color: #130A1F;
-  border: 1.5px solid #C2B8D0;
-  color: #F1E7FF;
-  font-size: small;
-}
-footer form div input {
-  width: 300px;
-  height: 28px;
-}
-@media only screen and (max-width: 415px) {
-  footer form div input {
-    height: 30px;
-  }
-}
-footer form div textarea {
-  width: 600px;
-  height: 256px;
-  resize: none;
-  margin-top: 12px;
-}
-@media only screen and (max-width: 415px) {
-  footer form div textarea {
-    width: 316px;
-  }
+footer nav button span {
+  display: inline-block;
+  margin: 4px auto;
 }
 
 /*# sourceMappingURL=style.css.map */
