--- a/scss/main/_cards.scss
+++ b/scss/main/_cards.scss
@@ -77,7 +77,7 @@
             display: flex;
             flex-direction: row;
             align-items: flex-start;
-            justify-content: space-evenly;
+            justify-content: flex-start;
             margin-left: 32px;
             margin-top: 32px;
             @media only screen and (max-width:600px){
