--- a/scss/main/_footer.scss
+++ b/scss/main/_footer.scss
@@ -34,7 +34,18 @@ footer{
         @media only screen and (max-width:600px){
             margin-bottom: 24px;
         }
-        button{
+        >a{
+            >button{
+                background-color: darken(#25D366, 5%);
+                &:hover{
+                    background-color: lighten(#25D366, 10%);
+                }
+                &:active{
+                    background-color: lighten(#25D366, 20%);
+                }
+            }    
+        }
+        >button{
             margin:24px auto;
             font-size: $f-tiny;
             // background-color: $fondo-botones;
@@ -48,22 +59,18 @@ footer{
             font-weight: 400;
             color: $borde-botones;
             transition: all .5s;
-            &:first-child{
-                background-color: darken(#25D366, 5%);
-                &:hover{
-                    background-color: lighten(#25D366, 10%);
-                }
-            }
-            &:last-child{
-                background-color: #B53328;
-                &:hover{
-                    background-color: lighten(#B53328, 10%);
-                }
-            }
+            background-color: #B53328;
             display: flex;
             flex-direction: row;
             justify-content: flex-start;
             align-items: center;
+            &:hover{
+                background-color: lighten(#B53328, 10%);
+            }
+            &:active{
+            background-color: lighten(#B53328, 20%);
+            }
+            
             img{
                 height: 64px;
             }
