--- a/scss/main/_footer.scss
+++ b/scss/main/_footer.scss
@@ -1,3 +1,4 @@
+@import "../partials/mixin";
 footer{
     .nombreSeccion{
         text-align: center;
@@ -9,11 +10,11 @@ footer{
         span{
             margin-left: 20%;
             @media only screen and (max-width:600px){
-                margin-left: 8px;
+                margin-left: 16px;
             }
         }
         hr{
-            width: 60%;
+            width: 55%;
             margin: auto 32px;
             display: inline-block;
             @media only screen and (max-width:600px){
@@ -31,12 +32,22 @@ footer{
         justify-content: center;
         align-items: center;
         margin-bottom: 32px;
+        margin-top: 52px;
         @media only screen and (max-width:600px){
             margin-bottom: 24px;
         }
         >a{
+            all:unset;
             >button{
-                background-color: darken(#25D366, 5%);
+                @include btn-contact(darken(#25D366, 5%)); 
+                span{
+                    display: inline-block;
+                    margin: 4px auto 4px 64px;
+                }
+                img{
+                    height: 48px;
+                    margin: auto 12px;
+                }
                 &:hover{
                     background-color: lighten(#25D366, 10%);
                 }
@@ -46,24 +57,7 @@ footer{
             }    
         }
         >button{
-            margin:24px auto;
-            font-size: $f-tiny;
-            // background-color: $fondo-botones;
-            border: 1px solid $borde-botones;
-            border-radius: 6px;
-            width: 300px;
-            height: fit-content;
-            padding: 0;
-            font-family: $font-H;
-            text-align: center;
-            font-weight: 400;
-            color: $borde-botones;
-            transition: all .5s;
-            background-color: #B53328;
-            display: flex;
-            flex-direction: row;
-            justify-content: flex-start;
-            align-items: center;
+            @include btn-contact(#B53328);
             &:hover{
                 background-color: lighten(#B53328, 10%);
             }
@@ -72,11 +66,24 @@ footer{
             }
             
             img{
-                height: 64px;
+                height: 48px;
             }
             span{
                 display: inline-block;
-                margin: 4px auto;
+                margin: 4px auto 4px 64px;
+            }
+        }
+        >span{
+            display: inline-block;
+            margin: 4px auto;
+            color: transparent;
+            font-family:$font-H ;
+            transition: all .8s ease-in-out;
+            transform: translateY(-54px);
+            &.copiado{
+                transform: translateY(0px);
+                color: $parrafos;
+                transition: all .8s;
             }
         }
     }
