--- a/css/style.css
+++ b/css/style.css
@@ -402,8 +402,6 @@ main section:nth-child(3) .card .card-footer {
   }
 }
 main section:nth-child(3) .card .card-footer li {
-  width: 42px;
-  height: 42px;
   margin: auto 8px;
 }
 @media only screen and (max-widht: 600px) {
@@ -412,31 +410,49 @@ main section:nth-child(3) .card .card-footer li {
   }
 }
 main section:nth-child(3) .card .card-footer li a {
-  font-size: 28px;
+  all: unset;
+  font-size: 32px;
   text-align: center;
 }
-main section:nth-child(3) .card .card-footer li a span {
-  border-radius: 50%;
-  color: #7563AA;
-  border: 3px solid #7563AA;
+main section:nth-child(3) .card .card-footer li a button {
+  margin: 24px auto;
+  font-size: 1rem;
+  border-radius: 6px;
+  width: 156px;
+  height: 64px;
+  padding: 0;
+  font-family: "Roboto Flex", sans-serif;
+  text-align: center;
+  font-weight: 400;
+  color: #F1E7FF;
   transition: all 0.5s;
-  width: 100%;
-  height: 100%;
   display: flex;
-  justify-content: center;
+  flex-direction: row;
+  justify-content: flex-start;
   align-items: center;
 }
-main section:nth-child(3) .card .card-footer li a .bi-github:hover {
-  color: rgb(234, 234, 234);
-  border-color: rgb(234, 234, 234);
+main section:nth-child(3) .card .card-footer li a button.github {
+  color: black;
+  background-color: rgb(223, 223, 223);
 }
-main section:nth-child(3) .card .card-footer li a .bi-laptop:hover {
-  color: #afa5ce;
-  border-color: #afa5ce;
+main section:nth-child(3) .card .card-footer li a button.laptop {
+  color: #9D86DF;
+  background-color: #7563AA;
 }
-main section:nth-child(3) .card .card-footer li a .bi-diagram-3:hover {
-  color: rgb(119, 67, 67);
-  border-color: rgb(119, 67, 67);
+main section:nth-child(3) .card .card-footer li a button.figma {
+  color: #3d3e90;
+  background-color: #FD3258;
+}
+main section:nth-child(3) .card .card-footer li a button span {
+  display: inline-block;
+  transition: all 0.5s;
+  width: 100%;
+}
+main section:nth-child(3) .card .card-footer li a button span:not(.bi) {
+  margin: 12px auto;
+}
+main section:nth-child(3) .card .card-footer li a button .bi {
+  font-size: 48px;
 }
 main section:nth-child(3) .card > .list-lenguajes {
   margin-left: 32px;
