--- a/scss/main/_cards.scss
+++ b/scss/main/_cards.scss
@@ -1,3 +1,4 @@
+@import "../partials/mixin";
 .card{
         >button:first-child{
             margin:24px ; 
@@ -87,37 +88,39 @@
                 margin:24px 0;
             }
             li{
-                width: 42px;
-                height: 42px;
                 margin: auto 8px;
                 @media only screen and (max-widht:600px) {
                     margin: auto;
                 }
                 a{
-                    font-size: 28px;
+                    all: unset;
+                    font-size: 32px;
                     text-align: center;
-                    span{
-                        border-radius: 50%;
-                        color: nth($colores,2) ;
-                        border:3px solid nth($colores,2);
-                        transition: all .5s;
-                        width: 100%;
-                        height: 100%;
-                        display: flex;
-                        justify-content: center;
-                        align-items: center;
-                    }
-                    .bi-github:hover{
-                        color: rgb(234, 234, 234);
-                        border-color: rgb(234, 234, 234);
-                    }
-                    .bi-laptop:hover{
-                        color: lighten(nth($colores,2), 20%);
-                        border-color: lighten(nth($colores,2), 20%);
-                    }
-                    .bi-diagram-3:hover{
-                        color:rgb(119, 67, 67);
-                        border-color: rgb(119, 67, 67);
+                    button{
+                        @include btn-project(156px,64px);
+                        &.github{
+                            color: black;
+                            background-color: rgb(223, 223, 223);
+                        }
+                        &.laptop{
+                            color: nth($colores, 1 );
+                            background-color:nth($colores, 2 );
+                        }
+                        &.figma{
+                            color: #3d3e90;
+                            background-color: #FD3258;
+                        }                     
+                        span{
+                            display: inline-block;
+                            transition: all .5s;
+                            width: 100%;
+                            &:not(.bi){
+                                margin:12px auto
+                            }
+                        }
+                        .bi{
+                            font-size: 48px;
+                        }
                     }
                     
                 }
